--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
-					<ul class="copyright">
+					<ul class="copyright 2019">
 						<li>&copy; Untitled.</li>
 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
