--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						</a></li>
 					</ul>
 					<ul class="copyright 2019">
-						<li>&copy; Cpyright 2019.</li>
+						<li>&copy; Copyright 2019.</li>
 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
 					</ul>
