--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<ul class="copyright 2019">
 						<li>&copy; Copyright 2019.</li>
 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+						<li>Design: <a href="http://ldmfb.com">ldmfb</a>.</li>
 					</ul>
 				</div>
 			</footer>
