--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 			<section id="four" class="wrapper style2 special">
 				<div class="inner">
 					<header class="major narrow">
-						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
+						<h2>Get The Best Coupon Codes</h2>
+						<p>Best Lingerie Available Across Nation</p>
 					</header>
 					<form action="#" method="POST">
 						<div class="container 75%">
