--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<section id="four" class="wrapper style2 special">
 				<div class="inner">
 					<header class="major narrow">
-						<h2>Get The Best Coupon Codes</h2>
+						<h2>Yes I Want Coupon Codes</h2>
 						<p>Best Lingerie Available Across Nation</p>
 					</header>
 					<form action="#" method="POST">
