--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						</div>
 					</article>
 					<article class="feature right">
-						<span class="image"><img src="images/j.jpg" alt="" /></span>
+						<span class="image"><img src="images/clo1.jpg" alt="" /></span>
 						<div class="content">
 							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
 							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
