--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section id="banner">
 				<i class="icon fa-diamond"></i>
 				<h2>Your Innercomfort</h2>
-				<p>Magna feugiat lorem dolor egestas</p>
+				<p>Brings Best Lingerie To Meet Your Needs</p>
 				<ul class="actions">
 					<li><a href="#" class="button big special">Learn More</a></li>
 				</ul>
@@ -47,8 +47,8 @@
 					<article class="feature left">
 						<span class="image"><img src="images/clov.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<h2>Three Panties for 599</h2>
+							<p>Get Yourself Best Lingerie @affordable prices and enjoy the comfort you deserve</p>
 							<ul class="actions">
 								<li>
 									<a href="#" class="button alt">More</a>
