--- a/scene/index.html
+++ b/scene/index.html
@@ -103,8 +103,8 @@ http://www.tooplate.com/view/2099-scenic
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="about-info">
-                         <h3>Introducing Scenic</h3>
-                         <h1>This template is designed for you. Sed ornare, tortor nec placerat lacinia, leo quam rutrum leo, eget posuere ipsum sem eu justo. Integer nunc libero.</h1>
+                         <h3>Introducing Abhishek Chauhan</h3>
+                         <h1>Our mission as filmmaker is to give best entertainment experience to our audience.</h1>
                     </div>
                </div>
 
