--- a/scene/index.html
+++ b/scene/index.html
@@ -78,7 +78,7 @@ http://www.tooplate.com/view/2099-scenic
                <div class="col-md-8 col-sm-12">
                     <div class="home-text">
                          <h1>Welcome To My World</h1>
-                         <p>Feel free to ask your questions</p>
+                         <p>Entertainment Starts Here Feel free to ask your questions</p>
                          <ul class="section-btn">
                               <a href="#about" class="smoothScroll"><span data-hover="Discover More">Discover More</span></a>
                          </ul>
